objects/amazonconnect__AC_CtiAttribute__c.object
<CustomObject>
    <fields>
        <fullName>amazonconnect__Active__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>amazonconnect__CtiAdapter__c</fullName>
        <label>CTI Adapter</label>
        <referenceTo>amazonconnect__AC_CtiAdapter__c</referenceTo>
        <relationshipLabel>Attributes</relationshipLabel>
        <relationshipName>Attributes</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>amazonconnect__DefaultValue__c</fullName>
        <label>Default Value</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Display__c</fullName>
        <label>Display</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>amazonconnect__ACCtiAttributeDisplay</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>amazonconnect__Format__c</fullName>
        <label>Format</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Label__c</fullName>
        <label>Label</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Style__c</fullName>
        <label>Style</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>amazonconnect__Type__c</fullName>
        <label>Type</label>
        <required>true</required>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>amazonconnect__ACCtiAttributeType</valueSetName>
        </valueSet>
    </fields>
    <label>AC CTI Attribute</label>
    <nameField>
        <label>CTI Attribute Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>AC CTI Attributes</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>